[project]
name = "safe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "cryptography>=44.0.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
safe = "safe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
